-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 8.0.1
-
None
-
-
f792dc0216fc1fdae1e9d4421ccb489cae2aac2f 09047d5a99dbc4ca47a001b6976f9d2432135811
Explicit warnings and failures issued by user code are not reported in the test results (only in the xml output).
e.g., I have the following code :
#define CATCH_CONFIG_MAIN #include <catch2/catch.hpp> TEST_CASE("my test") { WARN("this message is not printed!"); FAIL("neither this one.."); }
The failure and warning shows up in the XML, but not the graphical output in the Test Results (Alt+9). In fact, the results don't even show the failure (it looks like something crashed).
All filters are checked (e.g., everything is supposed to show).
For Gerrit Dashboard: QTCREATORBUG-28394 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
441900,2 | AutoTest: Fix Catch2 output handling | 9.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
441963,2 | AutoTest: Log info messages as well | 9.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |