AutoTest: Fix Catch2 output handling

Handle warnings or explicit failures instead of ignoring
them.

Fixes: QTCREATORBUG-28394
Change-Id: I5ccde8e7b9dfa1118f42ea881b9152069616193f
Reviewed-by: David Schulz <david.schulz@qt.io>